fix: ToolTip not clickable on mobile

--- a/src/components/common/ToolTip/ToolTip.module.scss
+++ b/src/components/common/ToolTip/ToolTip.module.scss
@@ -48,7 +48,7 @@ $arrow-size: 15px;
         }
     }
 
-    &:hover {
+    &:hover, &:active, &:focus {
         .tooltipLabel {
             opacity: 1;
         }
